@@ -1,9 +1,9 @@
 {
     "name": "roundcube/vcard_attachments",
     "type": "roundcube-plugin",
-    "description": "This plugin detects vCard attachments/bodies and shows a button(s) to add them to address book",
+    "description": "Detects vCard attachments and allows to add them to address book. Also allows to attach vCards of your contacts to composed messages",
     "license": "GPLv3+",
-    "version": "3.2",
+    "version": "4.0",
     "authors": [
         {
             "name": "Thomas Bruederli",
