@@ -19,5 +19,7 @@
 $labels = array();
 $labels['addvcardmsg'] = 'Add vCard to addressbook';
 $labels['vcardsavefailed'] = 'Unable to save vCard';
+$labels['attachvcard'] = 'Attach vCard';
+$labels['vcard'] = 'vCard';
 
 ?>
