@@ -14,3 +14,8 @@ p.vcardattachment a {
 	background: url(vcard_add_contact.png) 6px 2px no-repeat;
 	padding: 1.2em 0.5em 0.7em 46px;
 }
+
+a.listbutton.vcard .inner
+{
+	background-position: center -2107px;
+}
