@@ -109,7 +109,7 @@ if ($plugin['abort']) {
 }
 
 // send downlaod headers
-header('Content-Type: text/x-vcard; charset='.RCUBE_CHARSET);
+header('Content-Type: text/vcard; charset=' . RCUBE_CHARSET);
 header('Content-Disposition: attachment; filename="contacts.vcf"');
 
 while ($result && ($row = $result->next())) {
