@@ -1707,6 +1707,7 @@ input.from_address
   position: absolute;
   margin-right: 5px;
   right: 0;
+  top: 0;
 }
 
 #abookactions
